Bug 115105 - Styles and Macros nodes don't expand in the Customize dialog
Summary: Styles and Macros nodes don't expand in the Customize dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: high normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.1.0
Keywords: bisected
Depends on:
Blocks:
 
Reported: 2018-01-19 11:18 UTC by Muhammet Kara
Modified: 2018-01-22 07:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Muhammet Kara 2018-01-19 11:18:51 UTC
In the Customize dialog's (Tools > Customize...) Tool, Menu and Context Menu tabs; when you select the Macros or Styles from the category dropdown list (on the top left), the main subcategories of Styles and Macros are shown in the listbox, but they don't expand on (docuble) click.

Tested the latest master, on 64 bit Debian 9.
Comment 1 Heiko Tietze 2018-01-19 11:54:57 UTC
/confirmed

Version: 6.1.0.0.alpha0+
Build ID: b29f2a34605ae9cc31ea754b7fd8520846946039
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); Calc: group threaded

In general, tree node should expand/collapse on single click. Double click executes an associated function.
Comment 2 Muhammet Kara 2018-01-19 17:29:54 UTC
Bisected. Bisection result is below. I'll try to look into what exactly caused the issue.
 582b2ed5ba25657afc2c2d45860899325b3b2450 is the first bad commit
commit 582b2ed5ba25657afc2c2d45860899325b3b2450
Author: Jim Raykowski <raykowj@gmail.com>
Date:   Mon Jan 1 14:52:41 2018 -0900

    tdf#36308 make double click not expand/collapse node in Navigator tree
    
    Change-Id: I0075af147e5aa02f09db57fc2113dcdfcab5bc57
    Reviewed-on: https://gerrit.libreoffice.org/47241
    Tested-by: Jenkins <ci@libreoffice.org>
    Reviewed-by: Heiko Tietze <tietze.heiko@gmail.com>
    Tested-by: Heiko Tietze <tietze.heiko@gmail.com>
    Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>

:040000 040000 d00c647c757097e098001a6c9eb2aa16ec2d2d04 baea7ea83282f86e25ac394482d583cbdde2d908 M	include
:040000 040000 126ebc9d89e55fdf8e5d17eb91cdcdeed3ad5b2f 733226bbba6fbcdf7c89965c176f91cc7f5aac23 M	svtools
:040000 040000 440f51cab115d50f37c330bc960bef45f27b9e86 458f119ac448725f505c35261a904c87157b0fec M	sw
Comment 3 Jim Raykowski 2018-01-19 22:14:39 UTC
This one is caused by MY bad placement of SetSublistDontOpenWithDoubleClick. I have moved it so it only will affect the content trees in the Navigator. Building and testing now.
Comment 4 Jim Raykowski 2018-01-20 00:45:35 UTC
It wasn't bad placement of SetSublistDontOpenWithDoubleClick after all, although it might be better to set the double click behavior for each content list in Navigator individually.

The error here is failure to initialize bSubLstOpDblClick. It's not the first time I have mistaken the bitfield in a bool declaration to be initialization.

Here is a link to the fix:
https://gerrit.libreoffice.org/#/c/48227/
Comment 5 Commit Notification 2018-01-22 07:39:23 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=44e9bbc29cc37d2bac089b8f051478f62f7d5d31

tdf#115105 Fix Styles and Macros nodes don't expand in Customize dialog

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.