tdf#115105 Fix Styles and Macros nodes don't expand in Customize dialog

by initializing bSubLstOpDblClick true.

Change-Id: I1e3419014cd0c0bf9d4363d0fc365124413d5508
Reviewed-on: https://gerrit.libreoffice.org/48227
Reviewed-by: Muhammet Kara <muhammet.kara@pardus.org.tr>
Tested-by: Muhammet Kara <muhammet.kara@pardus.org.tr>